--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -19,7 +19,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a href="#">Adding Ingredients to Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
+        <li><a style="cursor: pointer" (click)="navigateToEditRecipe()">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
     </div>
