--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="isRecipesActive"></app-recipes>
-      <app-shopping-list *ngIf="!isRecipesActive"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
