--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="cil-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success"
+      (click)="onCreateNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
@@ -9,7 +10,8 @@
     <app-recipe-item 
       [recipe]="piece" 
       *ngFor="let piece of recipes; let i = index"
-      (click)="onRecipeSelect(i)"
+      [recipe_sel]="recipes[selectedIndex]"
+      (click)="onNavigateToRecipeDetail(i)"
     ></app-recipe-item>
   </div>
 </div>
