--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,13 +1,8 @@
 <div class="row">
   <div class="col-md-6">
-    <app-recipes-list (recipeSelected)="onRecipeSelected($event)"></app-recipes-list>
+    <app-recipes-list></app-recipes-list>
   </div>
   <div class="col-md-6">
-    <app-recipes-detail 
-    *ngIf="selectedRecipe !== undefined; else InfoText"
-    [activeRecipe]="selectedRecipe"></app-recipes-detail>
-    <ng-template #InfoText>
-      <p>Please select a recipe!</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
