--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,9 +4,10 @@
     <!-- <router-outlet></router-outlet> -->
     <hr>
     <ul class="list-group">
-      <a href="#" class="list-group-item" 
+      <a class="list-group-item" 
         style="cursor: pointer"
-        *ngFor="let ingredient of ingredients">
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onSelectIngredient(i)">
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
     </ul>
