--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -7,31 +7,37 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    <h1>{{ activeRecipe.name }}</h1>
+  <div class="col-xs-4">
+    <h3>{{ activeRecipe.name }}</h3>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-8" style="line-height: 56px">
     <div appDropDown class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle">
         Manage <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Adding Ingredients to Shopping List</a></li>
+        <li><a routerLink="../../../shopping-list">Adding Ingredients to Shopping List</a></li>
         <li><a style="cursor: pointer" (click)="navigateToEditRecipe()">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
 </div>
+<hr>
 <div class="row">
   <div class="col-xs-12">
     {{ activeRecipe.description }}
   </div>
 </div>
+<hr>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <a class="list-group-item" 
+        style="cursor: pointer"
+        *ngFor="let ingredient of activeRecipe.ingredients; let i = index">
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>  
+    </ul>
   </div>
 </div>
