--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,19 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropDown>
+                <ng-template [ngIf]="!authService.isAuthenticated()">
+                    <li><a style="cursor: pointer" routerLink="signin">Login</a></li>
+                    <li><a style="cursor: pointer" routerLink="signup">Register</a></li>
+                </ng-template>
+                <li class="dropdown" appDropDown *ngIf="authService.isAuthenticated()">
                     <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer" (click)="onSaveRecipes()">Save Data</a></li>
                         <li><a style="cursor: pointer" (click)="onFetchRecipes()">Fetch Data</a></li>
                     </ul>
+                </li>
+                <li *ngIf="authService.isAuthenticated()">
+                    <a style="cursor:pointer" (click)="logout()">Sign Out</a>
                 </li>
             </ul>
         </div>
